fix(head): mobile page horizontal scroll

--- a/components/header/src/Header.module.scss
+++ b/components/header/src/Header.module.scss
@@ -208,6 +208,10 @@
     max-width: $breakpoint-xl;
     z-index: 12;
 
+    &--hidden {
+      display: none;
+    }
+
     @media (min-width: $breakpoint-sm) {
       top: auto;
       z-index: 11;
